<resources>
  <string name="app_name">SnekerDroid</string>
    <string name="register">Register</string>
  <string name="manufacturer">Manufacturer</string>
  <string name="device_type">DeviceType</string>
  <string name="device_model">DeviceModel</string>
  <string name="app_version">App version</string>
  <string name="mobile_no">PhoneNumber</string>
  <string name="phone_number">PhoneNumber</string>
  <string name="lastname">LastName</string>
  <string name="firstname">FirstName</string>
    <string name="welcome">Kindly  enter your details</string>
  <string name="background">TODO</string>
    <string name="deviceid">Device_id</string>
  <string name="hardware">Hardware</string>
    <string name="hello_world">hello</string>
</resources>
