<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.MainActivity">


  <ImageView
      android:id="@+id/header_image"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:adjustViewBounds="true"
      android:contentDescription="@string/background"
      android:scaleType="fitXY"
      android:src="@drawable/background_bg"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:gravity="center"
      android:textColor="@color/colorAccent"
      android:textStyle="bold"
      android:text="@string/welcome"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="60dp"
      android:background="@color/colorPrimary"
      app:layout_constraintEnd_toEndOf="@+id/textView"
      app:layout_constraintHorizontal_bias="0.501"
      app:layout_constraintStart_toStartOf="@+id/textView"
      app:layout_constraintTop_toBottomOf="@+id/textView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:text="@string/firstname" />

        <EditText
            android:id="@+id/firstname"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:text="@string/lastname" />

        <EditText
            android:id="@+id/lastname"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

          <com.hbb20.CountryCodePicker
              android:id="@+id/countryCodeHolder"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:background="@color/colorWhite"
              android:textSize="15sp"
              app:ccp_autoDetectCountry="true"
              app:ccp_textSize="14sp"
              tools:layout_editor_absoluteX="44dp"
              tools:layout_editor_absoluteY="480dp" />


          <EditText
              android:id="@+id/input_number"
              android:layout_width="130dp"
              android:layout_height="match_parent"
              android:layout_gravity="start"
              android:ems="12"
              android:gravity="center_vertical"
              android:textColor="@color/colorAccent"
              android:hint="@string/mobile_no"
              android:inputType="phone"
              android:padding="10dp"
              android:textSize="15sp" />

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
          android:id="@+id/sensitiveData"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

          <TextView
              android:layout_width="100dp"
              android:layout_height="50dp"
              android:gravity="center"
              android:textColor="@color/colorAccent"
              android:text="Project Code :" />

          <EditText
              android:id="@+id/projectcode"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:textColor="@color/colorAccent"
              android:text="DROID7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

          <TextView
              android:layout_width="100dp"
              android:layout_height="50dp"
              android:gravity="center"
              android:textColor="@color/colorAccent"
              android:background="@color/colorPrimaryDark"
              android:text="@string/app_version" />

          <EditText
              android:id="@+id/appversion"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:inputType="number"
              android:background="@color/colorPrimaryDark"
              android:textColor="@color/colorAccent"
              android:text="500" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

          <TextView
              android:layout_width="100dp"
              android:layout_height="50dp"
              android:gravity="center"
              android:background="@color/colorPrimaryDark"
              android:textColor="@color/colorAccent"
              android:text="fcm key :" />

          <EditText
              android:id="@+id/fcmkey"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimaryDark"/>

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
          android:orientation="vertical"
          android:id="@+id/detailsGroup"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:gravity="center"
              android:background="@color/colorPrimaryDark"
              android:textColor="@color/colorAccent"
              android:textStyle="bold"
              android:text="Device Details" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

          <TextView
              android:layout_width="100dp"
              android:layout_height="50dp"
              android:gravity="center"
              android:textColor="@color/colorAccent"
              android:background="@color/colorPrimaryDark"
              android:text="@string/device_model" />

          <TextView
              android:id="@+id/devicemodel"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

          <TextView
              android:layout_width="100dp"
              android:layout_height="50dp"
              android:gravity="center"
              android:background="@color/colorPrimary"
              android:textColor="@color/colorAccent"
              android:text="@string/device_type" />

          <TextView
              android:id="@+id/devicetype"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

          <TextView
              android:layout_width="100dp"
              android:layout_height="50dp"
              android:gravity="center"
              android:background="@color/colorPrimary"
              android:textColor="@color/colorAccent"
              android:text="@string/hardware"/>

          <TextView
              android:id="@+id/hardware"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

          <TextView
              android:layout_width="100dp"
              android:layout_height="50dp"
              android:gravity="center"
              android:background="@color/colorPrimary"
              android:textColor="@color/colorAccent"
              android:text="@string/manufacturer" />

          <TextView
              android:id="@+id/manufacturer"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:gravity="center" />

          <TextView
              android:layout_width="100dp"
              android:layout_height="50dp"
              android:gravity="center"
              android:text="@string/deviceid" />

          <TextView
              android:id="@+id/device_id"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center" />

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:text="@string/register" />

      </LinearLayout>

    </LinearLayout>

  </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>